--- a/client/src/index.css
+++ b/client/src/index.css
@@ -70,3 +70,12 @@ body {
   padding: 5px 10px;
   background-color: lightskyblue;
 }
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  width: 60%;
+  margin: 0 auto;
+}
